--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="row">
     	<!-- Current Employee Panel -->
     	<div class="col-lg-12">
-    		<div class="panel panel-default">
+    		<div class="panel panel-default panel-primary">
     			<div class="panel-heading">
     				<h3 class="panel-title">Current Train Schedule</h3>
     			</div>
@@ -49,7 +49,7 @@
     <div class="row">
       <!-- Search Parameters Panel  -->
       <div class="col-lg-12">
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Add Train</h3>
           </div>
